--- a/css/main.css
+++ b/css/main.css
@@ -3,11 +3,16 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 body {
     font-family: 'Cuprum';
     font-weight: 400;
+    color: white;
+    display: flex;
+    background: black;
+    font-size: 18px;
 }
 
 a {
@@ -16,4 +21,35 @@ a {
 
 img {
     max-width: 100%;
+}
+
+.container {
+    width: 1400px;
+    margin: 0 auto;
+}
+
+.hero {
+    padding-bottom: 100px;
+    position: relative;
+}
+
+.hero--info {
+    width: 530;
+    padding-top: 70px;
+}
+
+.hero--info h1 {
+    font-size: 50px;
+    font-weight: 600;
+}
+
+.hero--info p {
+    margin: 30px 0;
+    font-weight: 600;
+}
+
+.hero img {
+    position: absolute;
+    top: 150px;
+    right: 0;
 }
