--- a/css/main.css
+++ b/css/main.css
@@ -53,3 +53,13 @@ img {
     top: 150px;
     right: 0;
 }
+
+.light {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    background: radial-gradient(circle at var(--x) var(--y), transparent 10%, rgba(0,0,0,0.95) 20%);
+}
