--- a/css/main.css
+++ b/css/main.css
@@ -37,6 +37,7 @@ img {
     width: 530;
     padding-top: 70px;
     padding-block-end: 500px;
+    margin: 150px;
 }
 
 .hero--info h1 {
@@ -65,6 +66,9 @@ img {
     background: radial-gradient(circle at var(--x) var(--y), transparent 10%, rgba(0,0,0,0.95) 20%);
 }
 
+.jokes {
+    margin: 150px;
+}
 .joke1 {
     padding-top: 0;
 }
